# waybar-module-music

./: .editorconfig  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
nix/: build.nix  rust-toolchain.nix  shell.nix
src/: event_bus.rs  main.rs  player_client.rs  player_manager.rs  text_effect.rs  utils.rs
src/actors/: dbus_monitor.rs  display.rs  mod.rs
src/effects/: effect.rs  ellipsis.rs  marquee.rs  mod.rs  text_effect.rs
src/helpers/: dir.rs
src/interfaces/: dbus_client.rs
src/models/: args.rs  config.rs  mod.rs  mpris_identity.rs  mpris_metadata.rs  mpris_playback.rs  mpris_rate.rs  mpris_seeked.rs  playback_state.rs  player_client.rs  player_state.rs  player_timer.rs
src/services/: dbus_monitor.rs  dbus_service.rs  display.rs  player_manager.rs
src/utils/: time.rs
