[package]
name = "waybar-module-music"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
bincode = "2.0.1"
clap = { version = "4.5.40", features = ["derive"] }
dbus = "0.9.7"
dirs = "6.0.0"
log = "0.4.27"
simplelog = "0.12.2"
